Updated site with portfolio link and minor description/project link adjustments

--- a/88rising.html
+++ b/88rising.html
@@ -25,7 +25,7 @@
                     <div class="nav-grid-text grid nav-button add-gutters">
                         <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                         <a href="about.html" class="nav-item">About</a>
-                        <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                        <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
                     </div>
         
                 </nav>
@@ -54,8 +54,8 @@
                         <!-- right side -->
                             <div class="project-details">
                                 <p class="project-type">Experience Design - UX Research - UI/UX Design</p>
-                                <h1>88Rising</h1>
-                                <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists </p> 
+                                <h1>88rising Experience Design</h1>
+                                <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists.</p> 
                                 <div class="grid project-roles">
                                     <div class="col-1">
                                         <p class="role-type">The Team</p>
@@ -296,30 +296,27 @@
             <section class="more-project">
                 <div class="separating-line"></div>
                 <h3>Check out the process behind other projects!</h3>
-                <div class="grid project-card-2c">
+                <div class="grid project-card-2c"  id="end-card">
                     <div class="project-details project-item">
-                        <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
-                        <h3>The SFU Summer Festival</h3>
-                        <p class="project-description">A multimedia voluntary project for the annual SFU Summer Festival event</p>
-                        <a href="summerfest.html" class="label-button">The SFU Summer Festival</a>
+                        <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
+                        <h3>FurEverHome</h3>
+                        <p class="project-description">A Senior UI/UX Project in developing a fictional application dedicated to support new and current rescued dog owners</p>
+                        <a href="summerfest.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.jpg" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
-                            </video>
-                            <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/summerfest/SummerFest_100.jpg"
-                            data-src="img/summerfest/SummerFest_400.jpg"
-                            data-srcset="img/summerfest/SummerFest_400.jpg 400w,
-                                         img/summerfest/SummerFest_600.jpg 600w"
+                            <img alt="FurEverHome Banner image" class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.jpg"
+                            data-src="img\fureverhome\FureverhomeBanner_400.jpg"
+                            data-srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
+                                         img\fureverhome\FureverhomeBanner_800.jpg 800w,
+                                         img\fureverhome\FureverhomeBanner_1080.jpg 1080w"
                             data-sizes="100w">
-
                             <noscript>
-                                <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" controls="controls"></video> 
-                            
-                                <img src="img/summerfest/SummerFest_400.jpg" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
-                                srcset="img/summerfest/SummerFest_400.jpg 400w,
-                                        img/summerfest/SummerFest_600.jpg 600w" 
-                                sizes="(min-width: 60rem) 50vw, 100vw"
+                                <img src="img\fureverhome\FureverhomeBanner_400.jpg" alt="FurEverHome Banner image"
+                                srcset="img\fureverhome\FureverhomeBanner_400.jpg 400w,
+                                        img\fureverhome\FureverhomeBanner_800.jpg 800w,
+                                        img\fureverhome\FureverhomeBanner_1080.jpg 1080w" 
+                                sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
                         </figure> 
@@ -330,7 +327,7 @@
 
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
-            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
             <p>Website designed and coded by me :D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
