--- a/Splitwise.html
+++ b/Splitwise.html
@@ -25,7 +25,7 @@
                 <div class="nav-grid-text grid nav-button add-gutters">
                     <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
-                    <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                    <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
                 </div>
 
             </nav>
@@ -286,7 +286,7 @@
                         <p class="project-type">Motion Design - Story Boarding</p>
                         <h3>SFU Anime Icebreaker</h3>
                         <p class="project-description">A Motion Graphic animation for the SFU Anime Club's seasonal Club's Day event</p>
-                        <a href="icebreaker.html" class="label-button">View SFU Anime Icebreaker</a>
+                        <a href="icebreaker.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
@@ -312,7 +312,7 @@
 
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
-            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
             <p>Website designed and coded by me :D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
