--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav-grid-text grid nav-button add-gutters">
                 <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                 <a href="about.html" class="nav-item">About</a>
-                <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
             </div>
 
         </nav>
@@ -48,7 +48,7 @@
                     <!-- left side -->
                     <div class="project-details project-item">
                         <p class="project-type">Experience Design - UX Research - UI/UX Design</p>
-                        <h3>88rising</h3>
+                        <h3>88rising Experience Design</h3>
                         <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists.</p> 
                         <a href="88rising.html" class="label-button">View Project</a>
                     </div>
@@ -136,7 +136,7 @@
                     <div class="project-details">
                         <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
                         <h3>The SFU Summer Festival</h3>
-                        <p class="project-description">A multimedia voluntary project for The SFU Summer Festival annual convention</p>
+                        <p class="project-description">A multimedia voluntary project for The SFU Summer Festival annual convention.</p>
                         <a href="summerfest.html" class="label-button">View Project</a>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
     <footer id="contacts">
 
         <p class="footer-head">Thank you for checking out my works!</p>
-        <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+        <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
         <p>Website designed and coded by me :D</p>
     </footer>        
     <script src="js/vanilla-lazyload.js"></script>
