--- a/summerfest.html
+++ b/summerfest.html
@@ -25,7 +25,7 @@
                 <div class="nav-grid-text grid nav-button add-gutters">
                     <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
-                    <a href="https://drive.google.com/file/d/1_7IwkXYrgivNkrfzmJT4NRy8aM7-Vd8J/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
+                    <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
                 </div>
 
             </nav>
@@ -58,7 +58,7 @@
                         <div class="project-details">
                             <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
                             <h1>The SFU Summer Festival</h1>
-                            <p class="project-description">A multimedia voluntary project for The SFU Summer Festival event</p> 
+                            <p class="project-description">A multimedia voluntary project for The SFU Summer Festival annual convention.</p> 
                             <div class="grid project-roles">
                                 <div class="col-1">
                                     <p class="role-type">Roles</p>
@@ -347,15 +347,30 @@
             <section class="more-project">
                 <div class="separating-line"></div>
                 <h3>Check out the process behind other projects!</h3>
-                <div class="grid project-card-2c">
+                <div class="grid project-card-2c" id="end-card">
                     <div class="project-details project-item">
-                        <p class="project-type">3D Modelling/Animation - Award Winning</p>
-                        <h3>POV: You're a Karamatsu Girl</h3>
-                        <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
-                        <a href="Karamatsu.html" class="label-button">View POV: You're a Karamatsu Girl</a>
+                        <p class="project-type">Experience Design - UX Research - UI/UX Design</p>
+                        <h3>88rising Experience Design</h3>
+                        <p class="project-description">Reimagining 88rising’s website experience to assist fans in discovering and supporting lesser-known artists.</p>
+                        <a href="summerfest.html" class="label-button">View Project</a>
                     </div>
-                    <div class="project-img project-item" id="iframe-container">
-                        <iframe src="https://www.youtube.com/embed/P-Jd2lbXlTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <div class="project-img project-item">
+                        <figure>
+                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
+                            data-src="img\88rising\Thumbnail_400.png"
+                            data-srcset="img\88rising\Thumbnail_400.png 400w,
+                                         img\88rising\Thumbnail_600.png 600w,
+                                         img\88rising\Thumbnail_1080.png 1080w"
+                            data-sizes="100w">
+                            <noscript>
+                                <img src="img\88rising\Thumbnail_400.png" alt="88rising Banner image"
+                                srcset="img\88rising\Thumbnail_400.png 400w,
+                                        img\88rising\Thumbnail_600.png 600w,
+                                        img\88rising\Thumbnail_1080.png 1080w" 
+                                sizes="(min-width: 74rem) 50vw, 100vw"
+                                >
+                            </noscript>
+                        </figure> 
                     </div>
                 </div>
             </section>
@@ -363,7 +378,7 @@
 
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
-            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
             <p>Website designed and coded by me D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
