--- a/icebreaker.html
+++ b/icebreaker.html
@@ -25,7 +25,7 @@
                 <div class="nav-grid-text grid nav-button add-gutters">
                     <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
-                    <a href="#" class="nav-item">Resume</a>
+                    <a href="https://drive.google.com/file/d/17LMb8DhY5Witah1SeAFqrNYRx8uPrs1-/view?usp=sharing" class="nav-item">Resume</a>
                 </div>
 
             </nav>
@@ -320,7 +320,7 @@
                         <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
                         <h3>The SFU Summer Festival</h3>
                         <p class="project-description">A multimedia voluntary project for the annual SFU Summer Festival event</p>
-                        <a href="summerfest.html" class="label-button">The SFU Summer Festival</a>
+                        <a href="summerfest.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
@@ -349,7 +349,7 @@
 
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
-            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
             <p>Website designed and coded by me :D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
