Minor adujstments to 88rising asset for accessibility and link

--- a/summerfest.html
+++ b/summerfest.html
@@ -356,17 +356,17 @@
                     </div>
                     <div class="project-img project-item">
                         <figure>
-                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
-                            data-src="img\88rising\Thumbnail_400.png"
-                            data-srcset="img\88rising\Thumbnail_400.png 400w,
-                                         img\88rising\Thumbnail_600.png 600w,
-                                         img\88rising\Thumbnail_1080.png 1080w"
+                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\88risingMockUp_100.jpg"
+                            data-src="img\88rising\88risingMockUp_400.jpg"
+                            data-srcset="img\88rising\88risingMockUp_400.jpg 400w,
+                                         img\88rising\88risingMockUp_800.jpg 600w,
+                                         img\88rising\88risingMockUp_1080.jpg 1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img\88rising\Thumbnail_400.png" alt="88rising Banner image"
-                                srcset="img\88rising\Thumbnail_400.png 400w,
-                                        img\88rising\Thumbnail_600.png 600w,
-                                        img\88rising\Thumbnail_1080.png 1080w" 
+                                <img src="img\88rising\88risingMockUp_400.jpg" alt="88rising Banner image"
+                                srcset="img\88rising\88risingMockUp_400.jpg 400w,
+                                        img\88rising\88risingMockUp_800.jpg 600w,
+                                        img\88rising\88risingMockUp_1080.jpg 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
