--- a/88rising.html
+++ b/88rising.html
@@ -17,7 +17,6 @@
 
     <body>
         <header>
-            <!-- <div class="header"> -->
                 <nav class="grid nav-grid-master" id="navBar">
                     <a href="index.html" class="nav-item logo-text">
                         Luke Do
@@ -170,7 +169,7 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Insights gathered through interviews </figcaption>
+                        <figcaption class="caption-analysis">User Journey Map generated through through design sprints and user insights </figcaption>
                     </figure> 
                 </div>
 
@@ -301,7 +300,7 @@
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>FurEverHome</h3>
                         <p class="project-description">A Senior UI/UX Project in developing a fictional application dedicated to support new and current rescued dog owners</p>
-                        <a href="summerfest.html" class="label-button">View Project</a>
+                        <a href="Fureverhome.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
