--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
                     <!-- right side -->
                     <div class="project-img project-item static-img">
                         <figure>
-                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Thumbnail_100.png"
-                            data-src="img\88rising\Thumbnail_400.png"
-                            data-srcset="img\88rising\Thumbnail_400.png 400w,
-                                         img\88rising\Thumbnail_600.png 600w,
-                                         img\88rising\Thumbnail_1080.png 1080w"
+                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\88risingMockUp_100.jpg"
+                            data-src="img\88rising\88risingMockUp_400.jpg"
+                            data-srcset="img\88rising\88risingMockUp_400.jpg 400w,
+                                         img\88rising\88risingMockUp_800.jpg 600w,
+                                         img\88rising\88risingMockUp_1080.jpg 1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img\88rising\Thumbnail_400.png" alt="88rising Banner image"
-                                srcset="img\88rising\Thumbnail_400.png 400w,
-                                        img\88rising\Thumbnail_600.png 600w,
-                                        img\88rising\Thumbnail_1080.png 1080w" 
+                                <img src="img\88rising\88risingMockUp_400.jpg" alt="88rising Banner image"
+                                srcset="img\88rising\88risingMockUp_400.jpg 400w,
+                                        img\88rising\88risingMockUp_800.jpg 600w,
+                                        img\88rising\88risingMockUp_1080.jpg 1080w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
@@ -158,8 +158,8 @@
                             <img alt="Splitiwse Banner image" class="lazy js-off" src="img/Splitwise/Splitwise_banner_100.png"
                             data-src="img/Splitwise/Splitwise_banner_400.png"
                             data-srcset="img/Splitwise/Splitwise_banner_400.png 400w,
-                                         img/Splitwise/Splitwise_banner_800.png   800w,
-                                         img/Splitwise/Splitwise_banner_1080.png  1080w"
+                                         img/Splitwise/Splitwise_banner_800.png 800w,
+                                         img/Splitwise/Splitwise_banner_1080.png 1080w"
                             data-sizes="100w">
                             <noscript>
                                 <img src="img/Splitwise/Splitwise_banner_400.png" alt="Splitiwse Banner image"
