Added stakeholder to 88rising and fixes to other pages

--- a/88rising.html
+++ b/88rising.html
@@ -152,7 +152,7 @@
                             sizes="(min-width: 60rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">88rising's current website and content on YouTube</figcaption>
+                        <figcaption class="caption-analysis">88rising's current website and content spread across YouTube</figcaption>
                     </figure>
                     <h3>Framing the issue</h3>
                     <p>After considering both the business and consumers’ perspectives, my teammates and I saw a missed opportunity for 88rising as many fans weren’t engaging and discovering more of 88rising’s roster due to many of their artists and collaborative content being scattered across different platforms. We believed that by <span>leveraging 88rising’s unique Asian American identity and collaborative works from diverse artists across different cultural backgrounds, we could help fans discover and connect more with artists and provide artists with a piece of the spotlight they have lacked until now.</span></p>
@@ -197,6 +197,12 @@
                     </figure>
                     <p><span>This intervention invites both fans and visitors to explore 88rising as a whole and delve deeper into artists they may not have heard of previously.</span> Throughout the site, fans can watch and listen to different collaborations and stories from artists, revealing the inspirations, cultural context, and symbolism of their songs while also giving fans a preview of who they are behind the screen. In doing such, our proposal aims to simplify discovery and support lesser-known artists from 88rising through establishing connections with the audience.</p>
 
+                    <h3>Interactive prototype</h3>
+                    <div id="interactive-prototype">
+                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaRfynDHRrGy4l6AnK5kR3P%2F88rising-Demo-Prototype%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D1-1603%26viewport%3D1628%252C1254%252C0.08%26t%3DIa0LVaECprAUeI6e-1%26scaling%3Dmin-zoom%26mode%3Ddesign" allowfullscreen></iframe>
+                        <p class="caption-analysis">Use <span><strong>fullscreen and fit to width</strong></span> for better use of the prototype.</p>
+                    </div>
+                    
                     <h3>Connecting Through Languages</h3>
                     <p>Our research showed that similar to 88rising’s artist roster, their fans are spread across the globe, having different cultural backgrounds and experiences. The use of different languages when they first land on the site helps ease fans into new artists by establishing relatable connections based on language and culture. This helps provide a starting point and draws in casual audiences unfamiliar with where to begin.</p>
                     <figure class="project-img figure-analysis">
@@ -265,6 +271,15 @@
                         </noscript>
                         <figcaption class="caption-analysis">88rising Artist Page Navigation</figcaption>
                     </figure> 
+                    <h3>Stakeholder Value</h3>
+                        <div class="project-quotes">
+                            <p>88rising (business)</p>
+                            <h5>Fostering a loyal fan base through increasing song engagements and merch sales. Highlighting lesser known artists to deepen their talent pool all while further promoting Asian American media to mainstream global audiences.</h4>
+                        </div>
+                        <div class="project-quotes">
+                            <p>Fans (Consumer)</p>
+                            <h5>Helps create a more diverse music & artists range through enhanced discoverability and deeper artists engagement. Fans gain an appreciation of the artist’s creativity, influences and personal experiences.</h4>
+                        </div>
                 </div>
             </section>
 
@@ -299,7 +314,7 @@
                     <div class="project-details project-item">
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>FurEverHome</h3>
-                        <p class="project-description">A Senior UI/UX Project in developing a fictional application dedicated to support new and current rescued dog owners</p>
+                        <p class="project-description">A Senior UI/UX Project in developing a fictional mobile application dedicated to support new and current rescued dog owners.</p>
                         <a href="Fureverhome.html" class="label-button">View Project</a>
                     </div>
                     <div class="project-img project-item">
