--- a/Splitwise.html
+++ b/Splitwise.html
@@ -107,7 +107,7 @@
                         <figcaption class="caption-analysis">Splitiwse's design elements </figcaption>
                     </figure>
                     <h3>Competitive Analysis</h3>
-                    <p>During our research, we also looked at other expense spliting application to help us understand what features Splitwise have and how they compare with others in the same market</p>
+                    <p>During our research, we also looked at other expense spliting application to help us understand what features Splitwise have and how they compare with others in the same market. As Splitwise has both a free and pro version, we had to take into account of the different features they offer.</p>
                     <figure class="figure-analysis project-img static-img">
                         <img alt="Splitwise Competitive Analysis" class="lazy js-off" src="img/Splitwise/competitiveanalysis_100.png"
                         data-src="img/Splitwise/competitiveanalysis_400.png"
@@ -126,7 +126,7 @@
                         <figcaption class="caption-analysis">Splitwise competitive analysis</figcaption>
                     </figure> 
                     <h3>User Interviews & Initial Ideas</h3>
-                    <p>To get a better understanding of what frustrations current users have with Splitwise, we conducted two rounds of user interviews with 7 participants each time. While there were various issues and potential improvements to the app that the interviewee would like to be implemented, we found common responses highlighted in the photo below.</p>
+                    <p>To get a better understanding of what frustrations current users have with Splitwise, we conducted two rounds of on-site user interviews with 7 participants each time. While there were various issues and potential improvements to the app that the interviewee would like to be implemented, we found common responses highlighted in the photo below.</p>
                     <figure class="figure-analysis static-img" >
                         <img alt="User Interview Highlights" class="lazy js-off" src="img/Splitwise/SplitwiseResearch_100.png"
                         data-src="img/Splitwise/SplitwiseResearch_400.png"
@@ -167,7 +167,7 @@
                 <div class="final-proposal">
                     <h2>Final Proposal</h2>
                     <h3>Selected Idea and Persona</h3>
-                    <p>After doing a second round of user interviews in combination with feedback from the teaching staff, our team decided to go ahead with the payment information idea with an added functionality being a 2-way verification feature. In the process, to help us visualize our users, we formed the final persona below.</p>
+                    <p>After doing a second round of user interviews in combination with feedback from the teaching staff, our team decided to go ahead with the payment information idea with an added functionality being a 2-way verification feature. In the process, to help us visualize our users and how they would approach Splitwise and our proposed feature, we formed a main user persona below.</p>
                      <figure class="figure-analysis static-img" >
                         <img alt="Final mini persona" class="lazy js-off" src="img/Splitwise/persona_100.png"
                         data-src="img/Splitwise/persona_400.png"
@@ -268,14 +268,14 @@
                     
                     <div id="interactive-prototype">
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fg1tXkHHChjyNEs63AG7rjh%2FSplitwise-Feature-Design-(public)%3Fpage-id%3D321%253A1562%26type%3Ddesign%26node-id%3D555-1812%26viewport%3D-468%252C-86%252C0.27%26t%3DUmL2dw9ue8BygXPA-1%26scaling%3Dscale-down%26starting-point-node-id%3D555%253A1812%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
-                        <p class="caption-analysis">Use <strong>fullscreen</strong> for better use of prototype.</p>
+                        <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for better use of the prototype.</p>
                     </div>
                 </div>
             </section>
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>Through working on this project, I have gained experience with working with an existing visual and interaction design system. It has also reaffirmed the importance of designing for actual users' needs and not simply using assumptions from the design team!</p>
+                <p>Through working on this project, I have gained experience with working with an existing visual and interaction design system. It has also reaffirmed the importance of designing for actual users' needs and not simply using assumptions from the design team! I've also gotten a preview into how current UX and product designer would constantly ideate and develop new ideas to further improve their products to elevate the end user's experience</p>
             </section>
 
             <section class="more-project">
