--- a/fureverhome.html
+++ b/fureverhome.html
@@ -330,7 +330,7 @@
 
                     <div id="interactive-prototype">
                         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="65vh" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOO9ux9EHlY0RBSzmIo7Dhj%2FInteractive-Mockup%3Fpage-id%3D1254%253A15707%26type%3Ddesign%26node-id%3D1358-43959%26viewport%3D-223%252C-269%252C0.1%26t%3DXfeyihOcE7ZpkCdJ-1%26scaling%3Dscale-down%26starting-point-node-id%3D1358%253A43959%26show-proto-sidebar%3D1%26mode%3Ddesign" allowfullscreen></iframe>
-                        <p class="caption-analysis">Use <strong>fullscreen</strong> for better use of prototype.</p>
+                        <p class="caption-analysis">Use <strong><span>fullscreen</span></strong> for better use of the prototype.</p>
                     </div>
                 </div>
 
@@ -401,8 +401,8 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to <span>learn how to efficiently prototype a fully functional prototype application using Figma's components</span> (avoiding the tedious process of connecting the same link over and again D:).</p>
-                <p>I also learned how to collaborate within a team when working on developing a UI/UX application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered basing our decisions on our research and user’s insights.</p>
+                <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to <span>learn how to efficiently prototype a fully functional prototype application using Figma's components</span>.</p>
+                <p>I've also gained a better understanding of the importance of qualitative research and its differences from quantitative and secondary research. I also learned how to create interview questions that <span>don't lead the interviewee and encourage them to provide detailed and natural responses</span>. Furthermore, I gotten more experience of collaborating within a team when developing a mobile application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered <span>basing our decisions on our research and user’s insights.</span></p>
             </section>
 
             <section class="more-project">
