--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="project-details project-item">
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>FurEverHome</h3>
-                        <p class="project-description">A fictional application dedicated to support new and current rescued dog owners.</p> 
+                        <p class="project-description">A Senior UI/UX Project in developing a fictional mobile application dedicated to support new and current rescued dog owners.</p> 
                         <a href="fureverhome.html" class="label-button">View Project</a>
                     </div>
                     <!-- right side -->
@@ -148,7 +148,7 @@
                     <div class="project-details project-item ">
                         <p class="project-type">UI/UX Design - UX Research - Prototyping</p>
                         <h3>Splitwise Feature Design</h3>
-                        <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting app Splitwise</p>
+                        <p class="project-description">A Feature Design Project that aims to create a new feature for the expense splitting mobile pplication Splitwise.</p>
                         
                         <a href="Splitwise.html" class="label-button">View Project</a>
                     </div>
@@ -202,12 +202,12 @@
                     <div class="project-details">
                         <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
                         <h3>SFU Anime Icebreaker</h3>
-                        <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event</p> 
+                        <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event on social media.</p> 
                         <a href="icebreaker.html" class="label-button">View Project</a>
                     </div>
                 </div>
             </div>
-            <!-- scheduled to move to new works page -->
+            <!-- scheduled to move to new "works" page -->
             <!-- <div class="scroll-reveal container left active">
                 <div class="grid featured-project" id="fifth-project">
 
