--- a/summerfest.html
+++ b/summerfest.html
@@ -379,7 +379,7 @@
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
             <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:lukedo2111@gmail.com" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
-            <p>Website designed and coded by me D</p>
+            <p>Website designed and coded by me :D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
